--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -118,7 +118,8 @@
               <li><a class="link_name" href="voter-info">(Election Name)</a></li>
               <li><a href="voter-info">Voter Info</a></li>
               <li><a href="voter-turnout">Voter Turnout</a></li>
-              <li><a href="results">Results</a></li>
+              <li><a href="results">Vote Tally</a></li>
+              <li><a href="results">Vote Tally</a></li>
               <li><a href="reset">Reset Election</a></li>
             </ul>
           </li>
@@ -142,7 +143,7 @@
             <ul class="sub-menu">
               <li><a class="link_name" href="edit-account">System</a></li>
               <li><a href="edit-account">Edit Account</a></li>
-              <li><a href="manage-account">Manage Accounts</a></li>
+              <li><a href="manage-admins">Manage Admins</a></li>
               <li><a href="help-page">Help Page</a></li>
               <li><a href="history">System Activity Log</a></li>
             </ul>
